overflow fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,10 @@ body {
   overflow-x: hidden;
 }
 
+html, body, *{
+  box-sizing: border-box;
+}
+
 img {
   max-width: 100%;
 }
